@@ -3,12 +3,16 @@ package com.example.bookservice.controller;
 
 
 import com.example.bookservice.dto.BookDTO;
+import com.example.bookservice.entity.Book;
 import com.example.bookservice.service.BookService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+
 
 import java.util.Arrays;
 import java.util.List;
@@ -39,97 +43,98 @@ class BookControllerTest {
 
     @Test
     void testCreateBook() {
-        when(bookService.save(any())).thenReturn(sampleBookDTO);
+        when(bookService.save(any(Book.class))).thenReturn(sampleBookDTO);
 
-        BookDTO result = bookController.create(new com.example.bookservice.entity.Book());
+        ResponseEntity<BookDTO> response = bookController.create(new Book());
 
-        assertEquals("Java Basics", result.getTitle());
-        verify(bookService).save(any());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals("Java Basics", response.getBody().getTitle());
+        verify(bookService).save(any(Book.class));
     }
 
     @Test
     void testGetAllBooks() {
-        List<BookDTO> books = Arrays.asList(sampleBookDTO);
-        when(bookService.findAll()).thenReturn(books);
+        when(bookService.findAll()).thenReturn(List.of(sampleBookDTO));
 
-        List<BookDTO> result = bookController.getAllBooks();
+        ResponseEntity<List<BookDTO>> response = bookController.getAllBooks();
 
-        assertEquals(1, result.size());
-        assertEquals("Java Basics", result.get(0).getTitle());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(1, response.getBody().size());
     }
 
     @Test
     void testGetBookById() {
         when(bookService.findById(1L)).thenReturn(sampleBookDTO);
 
-        BookDTO result = bookController.getById(1L);
+        ResponseEntity<BookDTO> response = bookController.getById(1L);
 
-        assertEquals(1L, result.getId());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(1L, response.getBody().getId());
     }
 
     @Test
     void testUpdateBookById() {
-        when(bookService.updateById(eq(1L), any())).thenReturn(sampleBookDTO);
+        when(bookService.updateById(eq(1L), any(Book.class))).thenReturn(sampleBookDTO);
 
-        BookDTO result = bookController.updateById(1L, new com.example.bookservice.entity.Book());
+        ResponseEntity<BookDTO> response = bookController.updateById(1L, new Book());
 
-        assertNotNull(result);
-        assertEquals("Java Basics", result.getTitle());
-        verify(bookService).updateById(eq(1L), any());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals("Java Basics", response.getBody().getTitle());
+        verify(bookService).updateById(eq(1L), any(Book.class));
     }
 
     @Test
     void testDeleteBookById() {
         doNothing().when(bookService).deleteById(1L);
 
-        bookController.deleteById(1L);
+        ResponseEntity<Void> response = bookController.deleteById(1L);
 
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
         verify(bookService).deleteById(1L);
     }
 
     @Test
     void testGetBooksByLibraryId() {
-        List<BookDTO> books = List.of(sampleBookDTO);
-        when(bookService.getBooksByLibraryId(10L)).thenReturn(books);
+        when(bookService.getBooksByLibraryId(10L)).thenReturn(List.of(sampleBookDTO));
 
-        List<BookDTO> result = bookController.getBooksByLibraryId(10L);
+        ResponseEntity<List<BookDTO>> response = bookController.getBooksByLibraryId(10L);
 
-        assertEquals(1, result.size());
-        assertEquals(10L, result.get(0).getLibraryId());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(1, response.getBody().size());
+        assertEquals(10L, response.getBody().get(0).getLibraryId());
     }
 
     @Test
     void testSearchBooksByTitleAndPrice() {
-        List<BookDTO> books = List.of(sampleBookDTO);
-        when(bookService.findByTitleAndPriceRange("Java", 100.0, 600.0)).thenReturn(books);
+        when(bookService.findByTitleAndPriceRange("Java", 100.0, 600.0))
+                .thenReturn(List.of(sampleBookDTO));
 
-        List<BookDTO> result = bookController.searchBooksByTitleAndPrice("Java", 100.0, 600.0);
+        ResponseEntity<List<BookDTO>> response = bookController.searchBooksByTitleAndPrice("Java", 100.0, 600.0);
 
-        assertEquals(1, result.size());
-        assertEquals("Java Basics", result.get(0).getTitle());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(1, response.getBody().size());
+        assertEquals("Java Basics", response.getBody().get(0).getTitle());
     }
 
     @Test
     void testSearchBookByTitleAndAuthor() {
-        when(bookService.findByTitleAndAuthor("Java Basics", "Author A")).thenReturn(sampleBookDTO);
+        when(bookService.findByTitleAndAuthor("Java Basics", "Author A"))
+                .thenReturn(sampleBookDTO);
 
-        BookDTO result = bookController.searchBookByTitleAndAuthor("Java Basics", "Author A");
+        ResponseEntity<BookDTO> response = bookController.searchBookByTitleAndAuthor("Java Basics", "Author A");
 
-        assertEquals("Author A", result.getAuthor());
-        assertEquals("Java Basics", result.getTitle());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals("Author A", response.getBody().getAuthor());
     }
 
     @Test
-    void testSearchBooksByTitleAndPrice_WhenMinOrMaxPriceIsNull_ShouldThrowException() {
-        IllegalArgumentException exception1 = assertThrows(IllegalArgumentException.class, () ->
-                bookController.searchBooksByTitleAndPrice("Java", null, 500.0)
-        );
-        assertEquals("Both minPrice and maxPrice are required.", exception1.getMessage());
+    void testSearchBooksByTitleAndPrice_WhenMinOrMaxPriceIsNull_ShouldReturnBadRequest() {
+        ResponseEntity<List<BookDTO>> response1 =
+                bookController.searchBooksByTitleAndPrice("Java", null, 500.0);
+        assertEquals(HttpStatus.BAD_REQUEST, response1.getStatusCode());
 
-        IllegalArgumentException exception2 = assertThrows(IllegalArgumentException.class, () ->
-                bookController.searchBooksByTitleAndPrice("Java", 100.0, null)
-        );
-        assertEquals("Both minPrice and maxPrice are required.", exception2.getMessage());
+        ResponseEntity<List<BookDTO>> response2 =
+                bookController.searchBooksByTitleAndPrice("Java", 100.0, null);
+        assertEquals(HttpStatus.BAD_REQUEST, response2.getStatusCode());
     }
-
 }
